# backend/docs/swagger.json
@@ -507,12 +507,6 @@
                 },
                 "status": {
                     "type": "string"
-                },
-                "tokens": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "integer"
-                    }
                 }
             }
         },
@@ -543,20 +537,8 @@
                 "errorMessage": {
                     "type": "string"
                 },
-                "error_message": {
-                    "type": "string"
-                },
                 "status": {
                     "type": "string"
-                },
-                "status_code": {
-                    "type": "integer"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
