# backend/pkg/restapi/controllers/models.go
@@ -87,11 +87,6 @@ type ExpireTokenRequest struct {
 
 type ExpireTokenResponse struct {
 	common.ApiResponse
-
-	UserId       uint   `json:"user_id"`
-	Token        string `json:"token"`
-	StatusCode   int    `json:"status_code"`
-	ErrorMessage string `json:"error_message"`
 }
 
 type TokenExistsRequest struct {
